第三次提交：两个数据微服务，一个View微服务，且都能返回界面和数据。 本次提交代码，视图能够正常展现，使用的是比较旧的Ribbon

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <modules>
         <module>eureka-nacos-server</module>
         <module>product-data-service</module>
+        <module>product-view-service-ribbon</module>
     </modules>
 
     <name>springcloud-parent</name>
