--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
         <module>eureka-nacos-server</module>
         <module>product-data-service</module>
         <module>product-view-service-ribbon</module>
+        <module>product-view-service-feign</module>
+        <module>common-dep</module>
     </modules>
 
     <name>springcloud-parent</name>
@@ -28,8 +30,13 @@
         <java.version>1.8</java.version>
         <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
     </properties>
-
+<!--公共依赖-->
     <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>mysql</groupId>-->
+<!--            <artifactId>mysql-connector-java</artifactId>-->
+<!--            <version>5.1.21</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
