--- a/product-data-service/pom.xml
+++ b/product-data-service/pom.xml
@@ -17,6 +17,13 @@
 
 
     <dependencies>
+<!--        自己的依赖模块-->
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>common-dep</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
