--- a/product-data-service/src/main/resources/application.yml
+++ b/product-data-service/src/main/resources/application.yml
@@ -8,3 +8,6 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+#spring:
+  zipkin:
+    base-url: http://localhost:9411
