第六次提交 自己写了一个品牌微服务，在这个搭好的架子上，自己做一些简单的实例。 下一步：开始学习gulimall商城项目的 初级部分了，

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>product-view-service-ribbon</module>
         <module>product-view-service-feign</module>
         <module>common-dep</module>
+        <module>brand-data-service</module>
     </modules>
 
     <name>springcloud-parent</name>
