--- a/brand-data-service/pom.xml
+++ b/brand-data-service/pom.xml
@@ -20,6 +20,10 @@
     <dependencies>
         <!--        自己的依赖模块-->
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.example</groupId>
             <artifactId>common-dep</artifactId>
             <version>1.0-SNAPSHOT</version>
