--- a/config-server-git/pom.xml
+++ b/config-server-git/pom.xml
@@ -10,49 +10,25 @@
   </parent>
 
   <groupId>org.example</groupId>
-  <artifactId>product-view-service-feign</artifactId>
+  <artifactId>config-server-git</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>product-view-service-feign</name>
+  <name>config-server-git</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
-
   <dependencies>
-<!--配置 客户端-->
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-config</artifactId>
-    </dependency>
-<!--    链路追踪-->
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-zipkin</artifactId>
-    </dependency>
-<!--    公共依赖-->
-    <dependency>
-      <groupId>org.example</groupId>
-      <artifactId>common-dep</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-openfeign</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-config-server</artifactId>
     </dependency>
 
   </dependencies>
