--- a/product-view-service-feign/pom.xml
+++ b/product-view-service-feign/pom.xml
@@ -19,6 +19,11 @@
 
 
   <dependencies>
+<!--断路器 依赖-->
+      <dependency>
+          <groupId>org.springframework.cloud</groupId>
+          <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+      </dependency>
 <!--配置 客户端-->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
