--- a/product-view-service-feign/src/main/resources/application.yml
+++ b/product-view-service-feign/src/main/resources/application.yml
@@ -10,3 +10,14 @@ spring:
     mode: HTML5
   zipkin:
     base-url: http://localhost:9411
+
+feign.hystrix.enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+      cors:
+        allowed-origins: "*"
+        allowed-methods: "*"
